# mini-llama

./: CMakeLists.txt
ggml/: CMakeLists.txt
ggml/include/: ggml-kompute.h  ggml-metal.h  ggml-opencl.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp  ggml-backend.cpp  ggml-common.h  ggml-impl.h  ggml-quants.c  ggml.c  taskflow-impl.cpp  taskflow-impl.h
ggml/src/ggml-blas/: CMakeLists.txt
ggml/src/ggml-cpu/: CMakeLists.txt  arch-fallback.h  binary-ops.cpp  binary-ops.h  ggml-cpu-impl.h  ggml-cpu.c  ggml-cpu.cpp  ggml_task.cpp  hello.cu  ops.cpp  ops.h  vec.cpp
ggml/src/ggml-cpu/llamafile/: sgemm.cpp
include/: llama.h
src/: llama-graph.cpp  llama-hparams.cpp  llama-mmap.cpp
tests/: CMakeLists.txt  test-mtmd-c-api.c
tools/: CMakeLists.txt
tools/llama-bench/: llama-bench.cpp
tools/rpc/: rpc-server.cpp
tools/server/: server.cpp
